site/content/xap/10.0/admin/gigaspaces-management-center.markdown
---
type: post100
title:  Management Center
categories: XAP100ADM
parent: none
weight: 100
---

XAP Management Center is a GUI that allows you to view spaces, containers, and clusters and configure them, using the Space Browser tab. You can also deploy and manage services using the Deployments tab.


<br>

{{%fpanel%}}

[Menus and Buttons](./gigaspaces-browser-menus-and-buttons.html){{<wbr>}}
Using the File menu, Container menu, Space menu, Cluster menu, Windows menu, Help menu, button toolbar, and address bar.


[Tree Panel and Configurations](./gigaspaces-browser-tree-panel-and-configuration-panel.html){{<wbr>}}
Using the Grid Tree and the Configuration Panel on the right.

[Space Containers](./gigaspaces-browser-managing-space-container.html){{<wbr>}}
Using the Space Container Configuration tab of a container node in the Grid Tree, and tool buttons relevant for containers.


[Working with Clusters](./working-with-clusters-gigaspaces-browser.html){{<wbr>}}
Creating a cluster, replication options, load-balancing options, failover options, verifying and editing cluster definitions, visualizing clusters.


[Working with Spaces](./working-with-spaces-gigaspaces-browser.html){{<wbr>}}
Performing operations on a space in the XAP Browser.


[Pending Notifications](./pending-notify-templates-information.html){{<wbr>}}
Information regarding pending notify templates
 {{%/fpanel%}}
